<?xml version="1.0"?>
<package>
  <name>lepro_launch</name>
  <version>0.0.0</version>
  <description>The lepro_launch package</description>
  <maintainer email="chenght@me.neu.edu.cn">redsuncheng</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>astra_launch</build_depend>
  <build_depend>libuvc_camera</build_depend>
  <run_depend>astra_launch</run_depend>
  <run_depend>libuvc_camera</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
